AF-1218 : Remove discoveryClientPing. Clean up code.
