# bip-archetypetest/src/main/java/gov/va/bip/archetypetest/api/provider/ReferenceDiscoveryClientResource.java
@@ -5,7 +5,6 @@ import gov.va.bip.archetypetest.api.model.v1.GetServicesResponse;
 import gov.va.bip.framework.swagger.SwaggerResponseMessages;
 import gov.va.bip.archetypetest.ReferenceDiscoveryClientService;
 import gov.va.bip.archetypetest.api.ReferencePersonDiscoveryClientApi;
-import gov.va.bip.archetypetest.api.model.v1.DiscoveryClientPingResponse;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.http.HttpStatus;
@@ -18,11 +17,6 @@ public class ReferenceDiscoveryClientResource implements ReferencePersonDiscover
     @Autowired
     @Qualifier("REFERENCE_DISCOVERY_CLIENT_SERVICE_IMPL")
     private ReferenceDiscoveryClientService refDiscoveryClientPersonService;
-
-    @Override
-    public ResponseEntity<DiscoveryClientPingResponse> discoveryClientPing() {
-        return new ResponseEntity<>(refDiscoveryClientPersonService.discoveryClientPing(), HttpStatus.OK);
-    }
 
     @Override
     public ResponseEntity<GetServicesResponse> getServices() {
